--- a/ganttapp/src/app/task/task.component.html
+++ b/ganttapp/src/app/task/task.component.html
@@ -1,3 +1,4 @@
+<div id="perttDiagram" style="border: solid 1px black; width:100%; height:400px"></div>
 <div class="container" id="main-container">
     <div>
         <button type="button" class="btn btn-primary" (click)="onOpenModal(null, 'add')">
